# repo-api-equipo-A

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/API/: router_bridge.py  router_odoo.py  router_prestashop.py
app/API/bridge/products/: mapper.py  mapper_product_deactivation.py  mapper_product_update.py  mapper_stock.py  routes.py  service.py
app/API/categories/: logica.py  routes.py  schema_json.py
app/API/odoo/orders/: logica.py  routes.py
app/API/odoo/products/: routes.py
app/API/odoo/providers_o/: logica.py  routes.py
app/API/odoo/stock/: logica.py  routes.py  schema_json.py
app/API/orders/: logica.py  routes.py  schema_json.py
app/API/prestashop/: utils.py
app/API/prestashop/customers/: routes.py
app/API/prestashop/orders/: routes.py
app/API/prestashop/orders_payments/: routes.py
app/API/prestashop/payments/: routes.py  schema_json.py
app/API/prestashop/products/: routes.py  schema_json.py
app/API/prestashop/proveedores/: routes.py
app/API/products/: routes.py  schema_json.py
app/API/stock/: logica.py  routes.py  schema_json.py
app/Core/: config.py  odoo_client.py  prestashop_client.py
app/api/: router.py
app/api/providers_o/: logica.py  routes.py  schema_json.py
